--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Simple HTML File</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML file.</p>
+    <h1>Under Maintenance</h1>
 </body>
 </html>
