--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML File</title>
+    <meta http-equiv="refresh" content="0;url=https://www.hectorchen.com">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Under Maintenance</h1>
+    <p>Redirecting to personal website</p>
 </body>
 </html>
